--- a/custom_theme_technolibre/static/src/scss/button.scss
+++ b/custom_theme_technolibre/static/src/scss/button.scss
@@ -1,3 +1,5 @@
+// License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl.html).
+
 .btn-sq {
   font-family: "Apercu", sans-serif !important;
   white-space: nowrap;
