--- a/custom_theme_technolibre/static/src/scss/font.scss
+++ b/custom_theme_technolibre/static/src/scss/font.scss
@@ -1,16 +1,18 @@
+// License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl.html).
+
 html {
-  font-size: 12px;
+  font-size: 15px;
 }
 
 @include media-breakpoint-up(sm) {
   html {
-    font-size: 14px;
+    font-size: 16px;
   }
 }
 
 @include media-breakpoint-up(md) {
   html {
-    font-size: 16px;
+    font-size: 17px;
   }
 }
 
@@ -20,30 +22,31 @@ html {
   }
 }
 
-h1, h2, h3, h4, h5, h6, p, ul, a {
+h1, h2, h3, h4, h5, h6, ul, a {
   font-family: 'Apercu', sans-serif !important;
   line-height: 1.25 !important;
 }
 h1 {
-  font-size: 3rem !important;
+  font-size: 2.6rem !important;
 }
 h2 {
-  font-size: 2.4rem !important;
+  font-size: 2rem !important;
 }
 h3 {
-  font-size: 1.8rem !important;
+  font-size: 1.6rem !important;
 }
 h4 {
-  font-size: 1.5rem !important;
+  font-size: 1.4rem !important;
 }
 h5,
 h6 {
   font-size: 1rem !important;
 }
-p {
-  font-size: 1.2rem;
+p, ul {
+  font-size: 18px;
+  line-height: 1.5 !important;
 }
 a {
-  font-size: 1.2rem;
+  font-size: 18px;
   text-decoration: none !important;
 }
