--- a/custom_theme_technolibre/static/src/scss/footer.scss
+++ b/custom_theme_technolibre/static/src/scss/footer.scss
@@ -1,49 +1,71 @@
-#footer-tl {
-    background: theme-color('menu') !important;
-    padding: 4rem 0 3rem 0;
-    color: white;
-    position: relative;
-    
-    .foot-logo {
-        position: absolute;
-        top: 20px;
-        left: 15px;
-    }
+// License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl.html).
 
-    ul {
-        list-style: none;
-        padding: 0;
-    }
-}
-.foot-links {
+#footer {
+  padding: 4rem 20px 3rem 20px;
+  color: white;
+  position: relative;
+    
+  .foot-logo {
+    position: absolute;
+    top: 20px;
+    left: 15px;
+  }
+  ul {
+    list-style: none;
+    padding: 0;
+  }
+  .foot-links {
     margin: 2rem 0;
     display: flex;
     flex-direction: column;
-}
-.foot-links li {
+  }
+  .foot-links li {
     padding: 0.5rem 0;
     margin: 0.5rem 0;
-}
-.foot-links a {
+  }
+  .foot-links a {
     color: white;
-}
-.foot-logo img {
+  }
+  .foot-logo img {
     height: 2rem;
-}
-.foot-social-links {
+  }
+  .foot-social-links {
     margin: 2rem 0 1rem;
     display: flex;
     justify-content: center;
-}
-.foot-social-links > * {
+  }
+  .foot-social-links > * {
     padding: 0.5rem;
     margin: 0.5rem 2rem;
-}
-.foot-copyleft {
+  }
+  .foot-copyleft {
     text-align: center;
     font-size: 1.2rem !important;
+  }
+  .copyleft {
+    display:inline-block;
+    transform: rotate(180deg);
+  }
 }
-.copyleft {
-  display:inline-block;
-  transform: rotate(180deg);
+@media (min-width: 600px) {
+  #footer {
+    .foot-logo {
+      left: 50%;
+      transform: translateX(-50%);
+    }
+    .foot-links {
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-around;
+    }
+  } 
+}
+
+@media (min-width: 900px) {
+  #footer .foot-logo {
+      position: relative;
+      top: 0;
+      left: 0;
+      transform: translateX(0);
+  }
 }
