--- a/custom_theme_technolibre/static/src/scss/primary_variables.scss
+++ b/custom_theme_technolibre/static/src/scss/primary_variables.scss
@@ -1,3 +1,5 @@
+// License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl.html).
+
 $o-theme-layout: 'full';
 //$o-theme-navbar-height: 300px;
 
