--- a/erplibre_website_snippets/views/snippets.xml
+++ b/erplibre_website_snippets/views/snippets.xml
@@ -393,7 +393,7 @@
     </xpath>
   </template>
 
-  <!-- Add stylesheet -->
+  <!-- Add stylesheet & javascript-->
   <template id="assets_frontend_erplibre_website_snippets" inherit_id="website.assets_frontend">
     <xpath expr="//link[last()]" position="after">
       <link rel="stylesheet" type="text/scss" href="/erplibre_website_snippets/static/src/scss/snippet_content.scss" />
@@ -402,6 +402,10 @@
       <link rel="stylesheet" type="text/scss" href="/erplibre_website_snippets/static/src/scss/snippet_cards_flip.scss" />
       <link rel="stylesheet" type="text/scss" href="/erplibre_website_snippets/static/src/scss/snippet_five_part_panel.scss" />
       <link rel="stylesheet" type="text/scss" href="/erplibre_website_snippets/static/src/scss/snippet_linked_image_grid.scss" />
+    </xpath>
+    <xpath expr="//script[last()]" position="after">
+      <script type="text/javascript" src="/erplibre_website_snippets/static/src/js/website_snippet_animation_flip_card.js"/>
+      <script type="text/javascript" src="/erplibre_website_snippets/static/src/js/website_snippet_animation_extend_card.js"/>
     </xpath>
   </template>
 </odoo>
