[ADD] timeline snippet structure

--- a/erplibre_website_snippets/static/src/scss/snippet_cards_extend.scss
+++ b/erplibre_website_snippets/static/src/scss/snippet_cards_extend.scss
@@ -20,7 +20,7 @@
 		padding: 12px;
 
 		.card-extend__title {
-			padding-top: 12px;
+			padding: 12px 0;
 			display: flex;
 			align-items: center;
 		}
