--- a/erplibre_website_snippets/views/snippets.xml
+++ b/erplibre_website_snippets/views/snippets.xml
@@ -9,7 +9,7 @@
   </template>
 
   <template id="s_image" name="Image">
-      <img class="o_image_fluid img img-fluid" src="/web/image/website.s_picture_default_image" alt="Image"/>
+    <img class="o_image_fluid img img-fluid" src="/web/image/website.s_picture_default_image" alt="Image"/>
   </template>
 
   <template id="s_btn_outline" name="Button Outline">
@@ -129,7 +129,7 @@
   </template>
 
   <template id="s_cards_flip" name="Flippable Cards">
-    <section class="o_cards_flip  pt16 pb16">
+    <section class="o_cards_flip pt16 pb16">
       <div class="container">
         <div class="row">
           <div class="o_card_flip col-lg-4 col-md-6 col-sm-12">
@@ -254,6 +254,26 @@
     </section>
   </template>
 
+  <template id="s_timeline_vertical" name="Verticle Timeline">
+    <section class="o_timeline_vertical bg-200 pt16 pb16">
+      <div class="container">
+        <div class="timeline-wrapper">
+          <div class="timeline-inner bg-100">
+            <div class="timeline-inner__text">
+              <h4>Organization Inception</h4>
+              <p>Detail the story of the organization inception</p>
+            </div>
+            <div class="timeline-inner__date">
+              <h6>Jan</h6>
+              <h3>01</h3>
+              <h6>2021</h6>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </template>
+
   <!-- Add snippet_content to menu -->
   <template id="add_snippet_content_to_menu" inherit_id="website.snippets">
     <xpath expr="//div[@id='snippet_content']/div[@class='o_panel_body']" position="inside">
@@ -282,6 +302,7 @@
       <t t-snippet="erplibre_website_snippets.s_cards_flip" t-thumbnail="/erplibre_website_snippets/static/src/img/cards_flip.png"/>
       <t t-snippet="erplibre_website_snippets.s_five_part_panel" t-thumbnail="/erplibre_website_snippets/static/src/img/five_part_panel.png"/>
       <t t-snippet="erplibre_website_snippets.s_linked_image_grid" t-thumbnail="/erplibre_website_snippets/static/src/img/linked_image_grid.png"/>
+      <t t-snippet="erplibre_website_snippets.s_timeline_vertical" t-thumbnail="/erplibre_website_snippets/static/src/img/timeline_vertical.png"/>
     </xpath>
   </template>
 
@@ -316,7 +337,7 @@
       </div>
 
       <!-- Vertical alignment options -->
-      <div data-js="sizing_y" data-selector="section, .row > div, :not(.o_gallery > .container) > .o_avatar, .o_image_fluid, .o_btn_outline, o_bullets_finger, .o_h1, .o_h2, .o_h3, .o_h4, .o_h5, .o_h6, .o_p, .o_small"/>
+      <div data-js="sizing_y" data-selector=".o_avatar, .o_image_fluid, .o_btn_outline, o_bullets_finger, .o_h1, .o_h2, .o_h3, .o_h4, .o_h5, .o_h6, .o_p, .o_small, .timeline-wrapper"/>
 
       <!-- Hidden options based on screensize-->
       <div data-selector=".o_image_fluid, .o_btn_outline">
@@ -386,8 +407,8 @@
 
       <!-- Drag & drop options -->
       <div data-js="content" 
-        data-selector=".o_avatar, .o_image_fluid, .o_btn_outline, .o_bullets_finger, .o_h1, .o_h2, .o_h3, .o_h4, .o_h5, .o_h6, .o_p, .o_small, .o_pill"
-        data-drop-near="p, h1, h2, h3, blockquote, .s_btn, .s_card, .s_alert, .o_facebook_page, .s_share, .s_rating, .s_hr, .o_avatar, .o_image_fluid, .o_btn_outline, .o_bullets_finger, .o_h1, .o_h2, .o_h3, .o_h4, .o_h5, .o_h6, .o_p, .o_small, .o_pill"
+        data-selector=".o_avatar, .o_image_fluid, .o_btn_outline, .o_bullets_finger, .o_h1, .o_h2, .o_h3, .o_h4, .o_h5, .o_h6, .o_p, .o_small, .o_pill, .timeline-wrapper"
+        data-drop-near="p, h1, h2, h3, blockquote, .s_btn, .s_card, .s_alert, .o_facebook_page, .s_share, .s_rating, .s_hr, .o_avatar, .o_image_fluid, .o_btn_outline, .o_bullets_finger, .o_h1, .o_h2, .o_h3, .o_h4, .o_h5, .o_h6, .o_p, .o_small, .o_pill, .timeline-wrapper"
         data-drop-in=".content"/>
  
     </xpath>
@@ -402,6 +423,7 @@
       <link rel="stylesheet" type="text/scss" href="/erplibre_website_snippets/static/src/scss/snippet_cards_flip.scss" />
       <link rel="stylesheet" type="text/scss" href="/erplibre_website_snippets/static/src/scss/snippet_five_part_panel.scss" />
       <link rel="stylesheet" type="text/scss" href="/erplibre_website_snippets/static/src/scss/snippet_linked_image_grid.scss" />
+      <link rel="stylesheet" type="text/scss" href="/erplibre_website_snippets/static/src/scss/snippet_timeline_vertical.scss" />
     </xpath>
     <xpath expr="//script[last()]" position="after">
       <script type="text/javascript" src="/erplibre_website_snippets/static/src/js/website_snippet_animation_flip_card.js"/>
