--- a/erplibre_website_snippets/views/snippets.xml
+++ b/erplibre_website_snippets/views/snippets.xml
@@ -201,24 +201,21 @@
     <section class="o_linked_image_grid pt16 pb16">
       <div class="container">
         <div class="row">
-          <div class="linked_image col-lg-8 col-md-12 px-0 w-100 position-relative" style="height: 400px; overflow: hidden;">
+          <div class="linked_image col-lg-8 col-md-12 px-0 w-100 position-relative" style="height: 400px; overflow: hidden; background-image: url('/web/image/website.s_picture_default_image')">
             <a href="#">
-              <img class="o_image_fluid img img-fluid h-100" src="/web/image/website.s_picture_default_image" alt="Image"/>
               <h4 class="mb-0 py-1 text-center position-absolute" style="bottom: 0; left: 0; right: 0; background: rgba(0,0,0,0.5)">Newspaper</h4>
               <div class="image_overlay"/>
             </a>
           </div>
           <div class="col-lg-4 px-0">
-            <div class="linked_image w-100 px-0 position-relative" style="height: 200px; overflow: hidden">
+            <div class="linked_image w-100 px-0 position-relative" style="height: 200px; overflow: hidden; background-image: url('/web/image/website.s_picture_default_image')">
               <a href="#">
-                <img class="o_image_fluid img img-fluid h-100" src="/web/image/website.s_picture_default_image" alt="Image"/>
                 <h4 class="mb-0 py-1 text-center position-absolute" style="bottom: 0; left: 0; right: 0; background: rgba(0,0,0,0.5)">Events</h4>
                 <div class="image_overlay"/>
               </a>
             </div>
-            <div class="linked_image w-100 px-0 position-relative" style="height: 200px; overflow: hidden">
+            <div class="linked_image w-100 px-0 position-relative" style="height: 200px; overflow: hidden; background-image: url('/web/image/website.s_picture_default_image')">
               <a href="#">
-                <img class="o_image_fluid img img-fluid h-100" src="/web/image/website.s_picture_default_image" alt="Image"/>
                 <h4 class="mb-0 py-1 text-center position-absolute" style="bottom: 0; left: 0; right: 0; background: rgba(0,0,0,0.5)">Media</h4>
                 <div class="image_overlay"/>
               </a>
@@ -227,24 +224,21 @@
         </div>
         <div class="row d-flex flex-lg-row flex-column-reverse">
           <div class="col-lg-4 px-0">
-            <div class="linked_image w-100 px-0 position-relative" style="height: 200px; overflow: hidden">
+            <div class="linked_image w-100 px-0 position-relative" style="height: 200px; overflow: hidden; background-image: url('/web/image/website.s_picture_default_image')">
               <a href="#">
-                <img class="o_image_fluid img img-fluid h-100" src="/web/image/website.s_picture_default_image" alt="Image"/>
                 <h4 class="mb-0 py-1 text-center position-absolute" style="bottom: 0; left: 0; right: 0; background: rgba(0,0,0,0.5)">Events</h4>
                 <div class="image_overlay"/>
               </a>
             </div>
-            <div class="linked_image w-100 px-0 position-relative" style="height: 200px; overflow: hidden">
+            <div class="linked_image w-100 px-0 position-relative" style="height: 200px; overflow: hidden; background-image: url('/web/image/website.s_picture_default_image')">
               <a href="#">
-                <img class="o_image_fluid img img-fluid h-100" src="/web/image/website.s_picture_default_image" alt="Image"/>
                 <h4 class="mb-0 py-1 text-center position-absolute" style="bottom: 0; left: 0; right: 0; background: rgba(0,0,0,0.5)">Media</h4>
                 <div class="image_overlay"/>
               </a>
             </div>
           </div>
-          <div class="linked_image col-lg-8 col-md-12 px-0 w-100 position-relative" style="height: 400px; overflow: hidden;">
+          <div class="linked_image col-lg-8 col-md-12 px-0 w-100 position-relative" style="height: 400px; overflow: hidden; background-image: url('/web/image/website.s_picture_default_image')">
             <a href="#">
-              <img class="o_image_fluid img img-fluid h-100" src="/web/image/website.s_picture_default_image" alt="Image"/>
               <h4 class="mb-0 py-1 text-center position-absolute" style="bottom: 0; left: 0; right: 0; background: rgba(0,0,0,0.5)">Newspaper</h4>
               <div class="image_overlay"/>
             </a>
@@ -427,9 +421,23 @@
         data-selector=".o_avatar, .o_image_fluid, .o_btn_outline, .o_bullets_finger, .o_h1, .o_h2, .o_h3, .o_h4, .o_h5, .o_h6, .o_p, .o_small, .o_pill, .timeline-wrapper"
         data-drop-near="p, h1, h2, h3, blockquote, .s_btn, .s_card, .s_alert, .o_facebook_page, .s_share, .s_rating, .s_hr, .o_avatar, .o_image_fluid, .o_btn_outline, .o_bullets_finger, .o_h1, .o_h2, .o_h3, .o_h4, .o_h5, .o_h6, .o_p, .o_small, .o_pill, .timeline-wrapper"
         data-drop-in=".content"/>
- 
+
+      <!-- Background Image -->
+      <div data-js="background" 
+          data-selector=".linked_image">
+          <a tabindex="-1" href="#" class="dropdown-item" data-choose-image="true" data-no-preview="true"><i class="fa fa-picture-o"/>Background Image</a>
+      </div>
+     <!-- Background Image -->
+    <div data-js="background_position"
+        data-selector=".linked_image">
+        <a tabindex="-1" href="#" class="dropdown-item background_position_li" data-background-position="true" data-no-preview="true"><i class="fa fa-arrows"/>Background Image Sizing</a>
+    </div>
+
+
     </xpath>
   </template>
+
+  
 
   <!-- Add stylesheet & javascript-->
   <template id="assets_frontend_erplibre_website_snippets" inherit_id="website.assets_frontend">
