[FIX] Horizontal timeline scroll

--- a/erplibre_website_snippets/static/src/scss/snippet_timeline_horizontal.scss
+++ b/erplibre_website_snippets/static/src/scss/snippet_timeline_horizontal.scss
@@ -1,5 +1,5 @@
 .o_timeline_horizontal {
-  overflow-x: auto;
+  overflow-x: scroll;
   scroll-snap-type: x mandatory;
   scrollbar-width: none;
   
