[FIX] snippet cards JS & style update & format

--- a/erplibre_website_snippets/static/src/scss/snippet_content.scss
+++ b/erplibre_website_snippets/static/src/scss/snippet_content.scss
@@ -1,6 +1,6 @@
 // License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl.html).
 
-// snippet content ptions
+// snippet content options
 .top-left{
   top: 0;
   left: 0;
