--- a/erplibre_website_snippets/static/src/scss/snippet_cards_extend.scss
+++ b/erplibre_website_snippets/static/src/scss/snippet_cards_extend.scss
@@ -1,11 +1,10 @@
 // License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl.html).
 
 .o_card_extend {
-	padding: 10px;
 	overflow: hidden;
 	height: min-content;
-	margin-top: 1rem;
-  margin-bottom: 1rem;
+	margin: 1rem 0;
+	padding: 0 1rem;
 	cursor: pointer;
 	transition: opacity 0.8s;
 
@@ -14,6 +13,8 @@
 		height: 220px;
 		img {
 			width: 100%;
+			height: 100%;
+			object-fit: cover;
 		}
 	}
 	.card-extend__text {
