--- a/erplibre_website_snippets/static/src/scss/snippet_cards_flip.scss
+++ b/erplibre_website_snippets/static/src/scss/snippet_cards_flip.scss
@@ -2,11 +2,9 @@
 
 .o_card_flip {
   height: 480px;
-  color: white;
   perspective: 1000px;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-  cursor: pointer;
+	margin: 1rem 0;
+	padding: 0 1rem;
   
   .card-flip__inner {
     border: 1px solid #808080;
@@ -71,6 +69,9 @@
 			font-size: 2.4rem;
 		}
 	}
+  .flippable {
+      cursor: pointer;
+  }
   &.flippable.flipped .card-flip__inner {
     transform: rotateY(180deg);
   }
