--- a/erplibre_website_snippets/static/src/scss/snippet_linked_image_grid.scss
+++ b/erplibre_website_snippets/static/src/scss/snippet_linked_image_grid.scss
@@ -1,3 +1,5 @@
+// License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl.html).
+
 .o_linked_image_grid {
   .image_overlay {
     position: absolute;
