--- a/erplibre_website_snippets/static/src/scss/snippet_timeline_horizontal.scss
+++ b/erplibre_website_snippets/static/src/scss/snippet_timeline_horizontal.scss
@@ -1,3 +1,5 @@
+// License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl.html).
+
 .o_timeline_horizontal {
   overflow-x: scroll;
   scroll-snap-type: x mandatory;
