--- a/erplibre_website_snippets/static/src/scss/snippet_timeline_vertical.scss
+++ b/erplibre_website_snippets/static/src/scss/snippet_timeline_vertical.scss
@@ -1,3 +1,5 @@
+// License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl.html).
+
 .o_timeline_vertical {
   position: relative;
   width: 100%;
