--- a/erplibre_website_snippets/views/snippets.xml
+++ b/erplibre_website_snippets/views/snippets.xml
@@ -61,7 +61,7 @@
   </template>
 
   <template id="s_pill" name="Pill">
-    <span class="o_pill">Pew Pew Pew</span>
+    <span class="o_pill bg-200">Pew Pew Pew</span>
   </template>  
 
   <!-- Snippet Structure -->
@@ -108,19 +108,19 @@
   </template>
 
   <template id="s_cards_extend" name="Extendable Cards">
-    <section class="o_cards_extend pt16 pb16">
+    <section class="o_cards_extend pt16 pb16 bg-200">
       <div class="container">
         <div class="row">
           <div class="o_card_extend col-lg-4 col-md-6 col-sm-12">
             <div class="o_image_fluid">
               <img class="img img-fluid" src="/web/image/website.s_picture_default_image" alt="Product illustration"/>
             </div>
-            <div class="card-extend__text">
+            <div class="card-extend__text bg-100">
               <div class="card-extend__title">
                 <img class="img img-fluid" src="/erplibre_website_snippets/static/src/img/cards_extend.png" alt="icon"/>
-                <h4>Duplicate Me</h4>
+                <h4 class="o_h4">Extend on Click</h4>
               </div>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <p class="o_p">Duplicate Me. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             </div>
           </div>
         </div>
@@ -134,7 +134,7 @@
         <div class="row">
           <div class="o_card_flip col-lg-4 col-md-6 col-sm-12">
             <div class="card-flip__inner">
-              <div class="card-flip__front">
+              <div class="card-flip__front bg-200">
                 <h5>Full Stack Developer</h5>
                 <div class="o_avatar">
                   <img class="img img-fluid" src="/erplibre_website_snippets/static/src/img/portrait.png" alt="Avatar"/>
@@ -152,7 +152,7 @@
                   </a>
                 </div>
               </div>
-              <div class="card-flip__back">
+              <div class="card-flip__back bg-200">
                 <div>
                   <h4>Duplicate Me</h4>
                   <h5>Full Stack Developer</h5>
@@ -178,19 +178,34 @@
   </template>
 
   <template id="s_five_part_panel" name="5-Part Panel">
-    <section class="o_five_part_panel pt16 pb16">
+    <section class="o_five_part_panel p-3">
       <div class="container">
         <div class="row">
           <div class="col-lg-4 col-md-12 py-3">
-            <h3 class="o_h3">ERPLibre rocks!</h3>
+            <h3 class="o_h3 position-relative pb24 pt56">ERPLibre rocks!</h3>
             <p class="o_p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
           <div class="col-lg-8 col-md-12">
             <div class="row">
               <div class="col-lg-6 col-sm-12 p-3">
                 <i class="fa fa-2x fa-leaf rounded-circle bg-primary my-2"/>
-                <h4 class="o_h4">Duplicate Me</h4>
-                <p class="o_p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <h4 class="o_h4 position-relative">Duplicate Me</h4>
+                <p class="o_p pt24">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              </div>
+              <div class="col-lg-6 col-sm-12 p-3">
+                <i class="fa fa-2x fa-leaf rounded-circle bg-primary my-2"/>
+                <h4 class="o_h4 position-relative">Duplicate Me</h4>
+                <p class="o_p pt24">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              </div>
+              <div class="col-lg-6 col-sm-12 p-3">
+                <i class="fa fa-2x fa-leaf rounded-circle bg-primary my-2"/>
+                <h4 class="o_h4 position-relative">Duplicate Me</h4>
+                <p class="o_p pt24">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              </div>
+              <div class="col-lg-6 col-sm-12 p-3">
+                <i class="fa fa-2x fa-leaf rounded-circle bg-primary my-2"/>
+                <h4 class="o_h4 position-relative">Duplicate Me</h4>
+                <p class="o_p pt24">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
               </div>
             </div>
           </div>
@@ -256,12 +271,12 @@
         <div class="timeline-wrapper">
           <div class="timeline-inner">
             <div class="timeline-inner__text">
-              <h4>Organization Inception</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <h4 class="o_h4">Organization Inception</h4>
+              <p class="o_p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             </div>
             <div class="timeline-inner__date">
-              <h3>JAN</h3>
-              <h6>2021</h6>
+              <h3 class="o_h3">JAN</h3>
+              <h6 clas="o_h6">2021</h6>
             </div>
           </div>
         </div>
@@ -274,7 +289,7 @@
       <div class="container">
         <div class="timeline-wrapper">
           <div class="timeline-text">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p class="o_p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             <h2>2021</h2>
           </div>
           <div class="timeline-icon">
@@ -409,7 +424,7 @@
       </div>
 
       <!-- Color options -->
-			<div data-js="colorpicker" data-selector=".o_card_flip, .o_pill, .o_image_fluid, .timeline-inner">
+			<div data-js="colorpicker" data-selector=".o_pill, .o_image_fluid, .timeline-inner, .card-flip__front, .card-flip__back">
         <div class="dropdown-submenu">
           <a tabindex="-1" href="#" class="dropdown-item">
             <i class="fa fa-eyedropper"/>Color
@@ -429,17 +444,14 @@
           data-selector=".linked_image">
           <a tabindex="-1" href="#" class="dropdown-item" data-choose-image="true" data-no-preview="true"><i class="fa fa-picture-o"/>Background Image</a>
       </div>
+
      <!-- Background Image -->
-    <div data-js="background_position"
-        data-selector=".linked_image">
-        <a tabindex="-1" href="#" class="dropdown-item background_position_li" data-background-position="true" data-no-preview="true"><i class="fa fa-arrows"/>Background Image Sizing</a>
-    </div>
-
-
+      <div data-js="background_position"
+          data-selector=".linked_image">
+          <a tabindex="-1" href="#" class="dropdown-item background_position_li" data-background-position="true" data-no-preview="true"><i class="fa fa-arrows"/>Background Image Sizing</a>
+      </div>
     </xpath>
   </template>
-
-  
 
   <!-- Add stylesheet & javascript-->
   <template id="assets_frontend_erplibre_website_snippets" inherit_id="website.assets_frontend">
@@ -453,6 +465,7 @@
       <link rel="stylesheet" type="text/scss" href="/erplibre_website_snippets/static/src/scss/snippet_timeline_vertical.scss" />
       <link rel="stylesheet" type="text/scss" href="/erplibre_website_snippets/static/src/scss/snippet_timeline_horizontal.scss" />
     </xpath>
+
     <xpath expr="//script[last()]" position="after">
       <script type="text/javascript" src="/erplibre_website_snippets/static/src/js/website_snippet_animation_flip_card.js"/>
       <script type="text/javascript" src="/erplibre_website_snippets/static/src/js/website_snippet_animation_extend_card.js"/>
