--- a/erplibre_website_snippets/static/src/scss/snippet_cards_extend.scss
+++ b/erplibre_website_snippets/static/src/scss/snippet_cards_extend.scss
@@ -7,14 +7,12 @@
 	padding: 0 1rem;
 	cursor: pointer;
 	transition: opacity 0.8s;
-
-	.o_image_fluid {
-		overflow: hidden;
+	.card-extend__img {
+		width: 100%;
 		height: 220px;
-		img {
-			width: 100%;
+		overflow: hidden;
+		.o_image_fluid {
 			height: 100%;
-			object-fit: cover;
 		}
 	}
 	.card-extend__text {
