--- a/erplibre_website_snippets/static/src/scss/snippet_steps.scss
+++ b/erplibre_website_snippets/static/src/scss/snippet_steps.scss
@@ -8,7 +8,7 @@
     margin: 0 auto;
     img {
       max-width: 100%;
-      max-height: 300px;
+      height: 300px;
       object-fit: cover;
     }
   }
