--- a/erplibre_website_snippets/views/snippets.xml
+++ b/erplibre_website_snippets/views/snippets.xml
@@ -26,35 +26,35 @@
     </ul>
   </template>
 
-  <template id="s_h1" name="h1 tag">
+  <template id="s_h1" name="h1 Tag">
     <h1 class="o_h1">ERPLibre rocks!</h1>
   </template>
 
-  <template id="s_h2" name="h1 tag">
+  <template id="s_h2" name="h1 Tag">
     <h2 class="o_h2">ERPLibre rocks!</h2>
   </template>
 
-  <template id="s_h3" name="h3 tag">
+  <template id="s_h3" name="h3 Tag">
     <h3 class="o_h3">ERPLibre rocks!</h3>
   </template>
   
-  <template id="s_h4" name="h4 tag">
+  <template id="s_h4" name="h4 Tag">
     <h4 class="o_h4">ERPLibre rocks!</h4>
   </template>
   
-  <template id="s_h5" name="h5 tag">
+  <template id="s_h5" name="h5 Tag">
     <h5 class="o_h5">ERPLibre rocks!</h5>
   </template>
   
-  <template id="s_h6" name="h6 tag">
+  <template id="s_h6" name="h6 Tag">
     <h6 class="o_h6">ERPLibre rocks!</h6>
   </template>
   
-  <template id="s_p" name="p tag">
+  <template id="s_p" name="p Tag">
     <p class="o_p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
   </template>
 
-  <template id="s_small" name="small tag">
+  <template id="s_small" name="small Tag">
     <div class="o_small">
       <small>Lorem ipsum</small>
     </div>
@@ -68,8 +68,8 @@
   <template id="s_section_header" name="Section Header">
     <section class="o_section_header text-center pt16 pb16">
       <div class="container">
-        <h5 class="pt8 pb4">Lorem ipsum dolor sit amet</h5>
-        <h2 class="pt4 pb8">Lorem ipsum</h2>
+        <h5 class="o_h5 pt8 pb4">Lorem ipsum dolor sit amet</h5>
+        <h2 class="o_h2 pt4 pb8">Lorem ipsum</h2>
       </div>
     </section>
   </template>
@@ -81,8 +81,8 @@
           <img class="step-img" src="/web/image/website.s_picture_default_image" alt="step 1"/>
           <div class="step-info">
             <div class="step-num">1</div>
-            <h3>Lorem ipsum</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <h3 class="o_h3">Lorem ipsum</h3>
+            <p class="o_p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             <img class="step-line" src="/erplibre_website_snippets/static/src/img/curve_r.png" alt="line linking steps"/>
           </div>
         </div>
@@ -90,8 +90,8 @@
           <img class="step-img" src="/web/image/website.s_picture_default_image" alt="step 2"/>
           <div class="step-info">
             <div class="step-num">2</div>
-            <h3>Lorem ipsum</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <h3 class="o_h3">Lorem ipsum</h3>
+            <p class="o_p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             <img class="step-line" src="/erplibre_website_snippets/static/src/img/curve_l.png" alt="line linking steps"/>
           </div>
         </div>
@@ -99,8 +99,8 @@
           <img class="step-img" src="/web/image/website.s_picture_default_image" alt="step 3"/>
           <div class="step-info">
             <div class="step-num">3</div>
-            <h3>Lorem ipsum</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <h3 class="o_h3">Lorem ipsum</h3>
+            <p class="o_p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
         </div>
       </div>
@@ -112,8 +112,8 @@
       <div class="container">
         <div class="row">
           <div class="o_card_extend col-lg-4 col-md-6 col-sm-12">
-            <div class="o_image_fluid">
-              <img class="img img-fluid" src="/web/image/website.s_picture_default_image" alt="Product illustration"/>
+            <div class="card-extend__img">
+              <img class="o_image_fluid img img-fluid" src="/web/image/website.s_picture_default_image" alt="Product illustration"/>
             </div>
             <div class="card-extend__text bg-100">
               <div class="card-extend__title">
@@ -215,7 +215,7 @@
   </template>
 
   <template id="s_linked_image_grid" name="Linked Image Grid">
-    <section class="o_linked_image_grid pt16 pb16">
+    <section class="o_linked_image_grid p-3">
       <div class="container">
         <div class="row">
           <div class="linked_image col-lg-8 col-md-12 px-0 w-100 position-relative" style="height: 400px; overflow: hidden; background-image: url('/web/image/website.s_picture_default_image')">
@@ -285,7 +285,7 @@
   </template>
 
   <template id="s_timeline_horizontal" name="Horizontal Timeline">
-    <section class="o_timeline_horizontal pt16 pb16">
+    <section class="o_timeline_horizontal m-3">
       <div class="container">
         <div class="timeline-wrapper">
           <div class="timeline-text">
@@ -341,7 +341,7 @@
       <div data-selector=".o_avatar, .o_image_fluid, .o_btn_outline, .o_h1, .o_p, .o_small, .s_btn">
         <div class="dropdown-submenu">
           <a tabindex="-2" href="#" class="dropdown-item">
-            <i class="fa fa-align-left"/>Alignment(+=LG)</a>
+            <i class="fa fa-desktop"/>Alignment(+=LG)</a>
           <div class="dropdown-menu" role="menu">
             <a href="#" class="dropdown-item" data-select-class="text-lg-left">Left</a>
             <a href="#" class="dropdown-item" data-select-class="text-lg-center">Center</a>
@@ -354,7 +354,7 @@
       <div data-selector=".o_avatar, .o_image_fluid, .o_btn_outline, .o_h1, .o_p, .o_small, .s_btn">
         <div class="dropdown-submenu">
           <a tabindex="-2" href="#" class="dropdown-item">
-            <i class="fa fa-align-left"/>Alignment(-=MD)
+            <i class="fa fa-mobile-phone"/>Alignment(-=MD)
           </a>
           <div class="dropdown-menu" role="menu">
             <a href="#" class="dropdown-item" data-select-class="text-md-left">Left</a>
@@ -371,7 +371,7 @@
       <div data-selector=".o_image_fluid, .o_btn_outline">
         <div class="dropdown-submenu">
           <a tabindex="-2" href="#" class="dropdown-item">
-            <i class="fa fa-align-left"/>Visiblility
+            <i class="fa fa-eye"/>Visiblility
           </a>
           <div class="dropdown-menu" role="menu">
             <a href="#" class="dropdown-item" data-select-class="d-none d-lg-block">Visible above LG</a>
@@ -384,7 +384,7 @@
       <div data-selector=".o_image_fluid, .o_h3, .o_h4">
         <div class="dropdown-submenu">
           <a tabindex="-2" href="#" class="dropdown-item">
-            <i class="fa fa-align-left"/>Position
+            <i class="fa fa-css3"/>Position
           </a>
           <div class="dropdown-menu" role="menu">
             <a href="#" class="dropdown-item" data-select-class="position-relative">Relative</a>
@@ -399,7 +399,7 @@
       <div data-selector=".o_card_flip">
         <div class="dropdown-submenu">
           <a tabindex="-2" href="#" class="dropdown-item">
-            <i class="fa fa-align-left"/>Flip on Click?
+            <i class="fa-mail-forward"/>Flip on Click?
           </a>
           <div class="dropdown-menu" role="menu">
             <a href="#" class="dropdown-item" data-toggle-class="flippable">Yes/No</a>
@@ -411,7 +411,7 @@
       <div data-selector=".o_image_fluid">
         <div class="dropdown-submenu">
           <a tabindex="-2" href="#" class="dropdown-item">
-            <i class="fa fa-align-left"/>Absolute Positioning
+            <i class="fa fa-arrows"/>Absolute Positioning
           </a>
           <div class="dropdown-menu" role="menu">
             <a href="#" class="dropdown-item" data-select-class="top-left">Top-left</a>
