--- a/erplibre_website_snippets/static/src/scss/snippet_timeline_vertical.scss
+++ b/erplibre_website_snippets/static/src/scss/snippet_timeline_vertical.scss
@@ -34,8 +34,8 @@
   // circle
   .timeline-wrapper::after {
     content: '';
-    width: 1.25rem;
-    height: 1.25rem;
+    width: 24px;
+    height: 24px;
     background-color: theme-color('alpha');
     border: 4px solid white;
     border-radius: 50%;
@@ -135,10 +135,10 @@
     }
     // dot
     .timeline-wrapper::after {
-      left: 12px;
+      left: 9px;
     }
     .timeline-wrapper:nth-child(even)::after {
-      left: 12px;
+      left: 9px;
     } 
   }
 }
