--- a/erplibre_sale_report_template_vertical_header/views/report_invoice.xml
+++ b/erplibre_sale_report_template_vertical_header/views/report_invoice.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
   <data>
-    <template id="report_invoice_document_custom_erplibre"
-              name="Custom template invoice"
+    <template id="report_invoice_erplibre_vertical_header"
+              name="erplibre vertical header template invoice"
               inherit_id="account.report_invoice_document">
 
         <!-- add payment terms-->
