--- a/website_snippet_all/views/assets.xml
+++ b/website_snippet_all/views/assets.xml
@@ -6,6 +6,8 @@
         <xpath expr="//link[last()]" position="after">
             <link rel="stylesheet" type="text/scss" href="/website_snippet_all/static/src/scss/website_snippet_all.scss"/>
             <link rel="stylesheet" type="text/scss" href="/website_snippet_all/static/src/scss/s_color_blocks_2.scss"/>
+            <link rel="stylesheet" type="text/scss" href="/website_snippet_all/static/src/scss/s_color_blocks_4.scss"/>
+            <link rel="stylesheet" type="text/scss" href="/website_snippet_all/static/src/scss/s_two_columns.scss"/>
         </xpath>
         <xpath expr="//script[last()]" position="after">
             <script
