--- a/website_snippet_all/views/snippets.xml
+++ b/website_snippet_all/views/snippets.xml
@@ -18,6 +18,7 @@
             <t t-snippet="website_snippet_all.s_color_blocks_2" t-thumbnail="/website_snippet_all/static/src/img/snippet/s_color_block.png"/>
             <t t-snippet="website_snippet_all.s_color_blocks_4" t-thumbnail="/website_snippet_all/static/src/img/snippet/s_color_block.png"/>
             <t t-snippet="website_snippet_all.s_column" t-thumbnail="/website_snippet_all/static/src/img/snippet/s_column.png"/>
+            <t t-snippet="website_snippet_all.s_two_columns" t-thumbnail="/website_snippet_all/static/src/img/snippet/s_two_columns.png"/>
         </xpath>
     </template>
 </odoo>
