--- a/website_snippet_all/views/snippets.xml
+++ b/website_snippet_all/views/snippets.xml
@@ -20,6 +20,11 @@
             <t t-snippet="website_snippet_all.s_column" t-thumbnail="/website_snippet_all/static/src/img/snippet/s_column.png"/>
             <t t-snippet="website_snippet_all.s_two_columns" t-thumbnail="/website_snippet_all/static/src/img/snippet/s_two_columns.png"/>
             <t t-snippet="website_snippet_all.s_three_columns_circle" t-thumbnail="/website_snippet_all/static/src/img/snippet/s_three_columns_circle.png"/>
+
+        </xpath>
+        <xpath expr="//div[@id='snippet_feature']/div[hasclass('o_panel_body')]/t" position="before">
+            <t t-snippet="website_snippet_all.s_timeline" t-thumbnail="/website_snippet_all/static/src/img/snippet/s_timeline.png"/>
+
         </xpath>
     </template>
 </odoo>
