--- a/website_snippet_all/views/snippets.xml
+++ b/website_snippet_all/views/snippets.xml
@@ -24,7 +24,7 @@
         </xpath>
         <xpath expr="//div[@id='snippet_feature']/div[hasclass('o_panel_body')]/t" position="before">
             <t t-snippet="website_snippet_all.s_timeline" t-thumbnail="/website_snippet_all/static/src/img/snippet/s_timeline.png"/>
-
+            <t t-snippet="website_snippet_all.s_event_list" t-thumbnail="/website_snippet_all/static/src/img/snippet/s_event_list.png"/>
         </xpath>
     </template>
 </odoo>
